k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - env:
        - name: GF_SERVER_ROOT_URL
          value: http://localhost
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: teste
        image: pedrocesarti/internet-speedtest-docker:grafana
        name: web
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
status: {}
