k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "8083"
    port: 8083
    targetPort: 8083
  - name: "8086"
    port: 8086
    targetPort: 8086
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
